修改闲读相关文件和资源名称

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:name=".activity.PictureActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.TimeReadActivity"
+            android:name=".activity.IdleReadingActivity"
             android:screenOrientation="portrait" />
 
         <!-- *************************FileProvider begin************************* -->
