--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     // Glide(https://github.com/bumptech/glide)
     implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     // PhotoView(https://github.com/chrisbanes/PhotoView)
     implementation 'com.github.chrisbanes:PhotoView:2.1.4'
     // RxPermissions(https://github.com/tbruyelle/RxPermissions)
