--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
     defaultConfig {
-        applicationId "com.liyunlong.gankio"
         minSdkVersion 16
-        targetSdkVersion 27
-        versionCode 6
-        versionName "3.3"
+        targetSdkVersion 28
+        versionCode 8
+        versionName "3.6"
+        applicationId "com.henley.gankio"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -66,10 +66,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Support
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // Test
     testImplementation 'junit:junit:4.12'
@@ -79,19 +79,19 @@ dependencies {
     // Gson(https://github.com/google/gson)
     implementation 'com.google.code.gson:gson:2.8.5'
     // Glide(https://github.com/bumptech/glide)
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.7.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     // Retrofit(https://github.com/square/retrofit)
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     // Okhttp3(https://github.com/square/okhttp)
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
     // Rxjava2(https://github.com/ReactiveX/RxJava)
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
     // RxAndroid(https://github.com/ReactiveX/RxAndroid)
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     // PhotoView(https://github.com/chrisbanes/PhotoView)
     implementation 'com.github.chrisbanes:PhotoView:2.1.4'
     // RxPermissions(https://github.com/tbruyelle/RxPermissions)
