--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
             if (!variant.buildType.debuggable) {
                 output.assemble.doLast {
                     copy {
-                        def targetName = "Gank.IO-${variant.versionName}.apk"
+                        def targetName = "Gank.IO-v${variant.versionName}.apk"
                         from output.outputFile
                         into project.rootDir
                         rename { String fileName ->
